# openclaw-materials-lab

./: .gitignore  LICENSE  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
python/: pyproject.toml  requirements.txt
python/materials_lab/: __init__.py  ase_ops.py  mp_client.py  plotting.py  pymatgen_ops.py  report.py  schemas.py  worker.py
skills/material-science-research/: SKILL.md
skills/material-science-research/prompts/: goal_refinement.md  report_template.md
src/cli/: doctor.ts  process-runner.ts  register-materials-cli.ts  setup-python.ts  status.ts
src/core/: bridge-protocol.ts  config.ts  errors.ts  logger.ts  paths.ts  runtime-context.ts
src/hooks/: approvals.ts
src/services/: artifact-service.ts  note-service.ts  python-bridge.ts
src/tools/: index.ts  materials-analyze-structure.ts  materials-ase-relax.ts  materials-batch-screen.ts  materials-compare-candidates.ts  materials-export-report.ts  materials-fetch-structure.ts  materials-save-note.ts  materials-search-mp.ts  shared.ts
src/types/: bridge.ts  cli.ts  config.ts  openclaw-plugin-sdk.d.ts  tool-results.ts
tests/: approvals.test.ts  bridge.test.ts  cli.test.ts  config-schema-sync.test.ts  plugin.smoke.test.ts
tests/tools/: materials-analyze-structure.test.ts  materials-compare-candidates.test.ts  materials-export-report.test.ts  materials-search-mp.test.ts
